--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,7 @@
 set $mod Mod1
 
 # Font
-font pango:Noto Sans 10
+font pango:Hack 13
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -14,7 +14,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show run -sidebar-mode -terminal urxvt
-bindsym $mod+shift+z exec --no-startup-id albery
+bindsym $mod+shift+z exec --no-startup-id albert
 
 # change focus
 bindsym $mod+j focus left
@@ -67,16 +67,16 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # Workspace variables
-set $w1 "1: Terminal "
-set $w2 "2: Web "
-set $w3 "3: Code "
-set $w4 "4: Social "
-set $w5 "5: Maps "
-set $w6 "6: Media "
+set $w1 "1:"
+set $w2 "2:"
+set $w3 "3:"
+set $w4 "4:"
+set $w5 "5:"
+set $w6 "6:"
 set $w7 "7:"
 set $w8 "8:"
 set $w9 "9:"
-set $w10 "10: Junk "
+set $w10 "10:Junk"
 
 #switch to workspace
 bindsym $mod+1 workspace $w1
@@ -136,31 +136,33 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Colors
-set $green #7A846C
-set $bg #282828
-set $txt #ffffff
+set $nord0 #2e3440
+set $nord1 #3b4252
+set $nord2 #434c5e
+set $nord3 #4c566a
+set $nord4 #d8dee9
+set $nord5 #e5e9f0
+set $nord6 #eceff4
+set $nord7 #8fbcbb
+set $nord8 #88c0d0
+set $nord9 #81a1c1
+set $nord10 #5e81ac
+set $nord11 #bf616a
+set $nord12 #d08770
+set $nord13 #ebcb8b
+set $nord14 #a3be8c
+set $nord15 #b48ead
 
-# Class          #Border #Background  #Text #Indicator #Child_Border
-client.focused   $green  $bg          $txt  $green     $green
 
 
-bar {
-	position bottom
-	# status command i3blocks ~/.config/i3/i3blocks.conf
-	font pango: Noto Sans 12
-	strip_workspace_numbers yes
-	separator_symbol "//"
-	# height 24
-	colors {
-		background #282828
-		statusline #DDDDDD
-		separator #7addda
-		focused_workspace	 #2B83A6	#2B83A6	#DDDDDD
-		active_workspace	 #212121	#212121	#DDDDDD
-		inactive_workspace	 #212121	#212121	#DDDDDD
-		urgent_workspace	 #D64E4E	#D64E4E	#DDDDDD
-	}
-}
+# class                 border  backgr. text    indicator child_border
+client.focused          $nord13 $nord11 $nord6 $nord11   #285577
+client.focused_inactive #333333 #5f676a $nord6 #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #222222
+client.urgent           #2f343a #900000 $nord6 #900000   #900000
+client.placeholder      #000000 #0c0c0c $nord6 #000000   #0c0c0c
+
+client.background       #ffffff
 
 # i3gaps config
 # for_window [class="*"] border pixel 2 #ffffff
