--- a/i3/config
+++ b/i3/config
@@ -7,14 +7,13 @@ font pango:Hack 13
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec konsole
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run -sidebar-mode -terminal urxvt
-bindsym $mod+shift+z exec --no-startup-id albert
+bindsym $mod+d exec --no-startup-id rofi -show run -sidebar-mode -terminal gnome-terminal
 
 # change focus
 bindsym $mod+j focus left
@@ -135,48 +134,55 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Colors
-set $nord0 #2e3440
-set $nord1 #3b4252
-set $nord2 #434c5e
-set $nord3 #4c566a
-set $nord4 #d8dee9
-set $nord5 #e5e9f0
-set $nord6 #eceff4
-set $nord7 #8fbcbb
-set $nord8 #88c0d0
-set $nord9 #81a1c1
-set $nord10 #5e81ac
-set $nord11 #bf616a
-set $nord12 #d08770
-set $nord13 #ebcb8b
-set $nord14 #a3be8c
-set $nord15 #b48ead
+set $snazz0 #2c2f3d
+set $snazz1 #232631
+set $snazz2 #282a36
+set $snazz3 #616263
+set $snazz4 #54555e
+set $snazz5 #686868
+set $snazz6 #f1f1f0
+set $snazz7 #eff0eb
+set $snazz8 #9aedfe
+set $snazz9 #5af78e
+set $snazz10 #ff6ac1
+set $snazz11 #ff5c57
+set $snazz12 #ffcb6b
+set $snazz13 #f3f99d
+set $snazz14 #a3be8c
+set $snazz15 #f1f1f0
+set $snazz16 #5AF78E
 
 # class                 border  backgr. text    indicator child_border
-client.focused          $nord13 $nord11 $nord6  $nord11   $nord14
-client.focused_inactive $nord9  #5f676a $nord6  #484e50   $nord0
-client.unfocused        $nord9  #222222 #888888 #292d2e   #222222
-client.urgent           $nord11 #ffffff $nord6  #ffffff   #ffffff
-client.placeholder      #000000 #0c0c0c $nord6  #ffffff   #0c0c0c
+client.focused          $snazz13 $snazz11 $snazz6  $nord11  $snazz13
+client.focused_inactive $snazz9  $snazz12 $snazz6  #484e50  $snazz0
+client.unfocused        $snazz9  #222222 #888888  #292d2e   #222222
+client.urgent           $snazz11 #ffffff $snazz6  #ffffff   #ffffff
+client.placeholder      #000000 #0c0c0c  $snazz6  #ffffff   #0c0c0c
 
-client.background       #2e3440
+client.background       $snazz0
 
 bar {
         status_command i3status
         position top
+
         separator_symbol ":|:"
         colors {
-          background $nord0
-          statusline $nord9
+          background $snazz0
+          statusline $snazz14
+          separator $snazz6
+
+        # Class            border  BckGround text
+        focused_workspace  #000000 $snazz14   $snazz1
+        active_workspace   #333333  #5f676a   $snazz0
+        inactive_workspace #333333  $snazz0   $snazz6
         }
 }
 
 # i3gaps config
-for_window [class="*"] border pixel 2 #ffffff
-gaps inner 10
-
-smart_borders on
-smart_gaps on
+# for_window [class="*"] border pixel 2 #ffffff
+# gaps inner 10
+# smart_borders on
+# smart_gaps on
 
 #i3lock
 bindsym $mod+shift+x exec i3lock --color #2A353B
@@ -186,7 +192,6 @@ hide_edge_borders none
 new_window pixel 3
 
 ##### Startup Applications ####
-
 # Network Manager
 exec --no-startup-id nm-applet
 
@@ -198,10 +203,3 @@ exec compton -f
 
 # Wallpaper
 exec_always feh --bg-fill ~/Pictures/Wallpaper/Blue.jpg
-
-#Polybar
-# exec polybar main
-# exec_always --no-startup-id ~/.config/polybar/./launch.sh
-
-# Go Documentation
-exec --no-startup-id godoc -http=:8080
