--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -1,49 +1,83 @@
-[window]
-command=/usr/libexec/i3blocks/window
-#interval=repeat
-interval=1
+# Global properties
+#
+# The top properties below are applied to every block, but can be overridden.
+# Each block command defaults to the script name to avoid boilerplate.
+command=/usr/share/i3blocks/$BLOCK_NAME
+separator_block_width=100
+markup=none
 
-[cmus]
-command=/usr/libexec/i3blocks/cmus
-interval=1
+# Volume indicator
+#
+# The first parameter sets the step (and units to display)
+# The second parameter overrides the mixer selection
+# See the script for details.
+[volume]
+label=VOL
+#label=♪
+instance=Master
+#instance=PCM
+interval=once
+signal=10
 
-[net]
-command=/usr/libexec/i3blocks/bandwidth
-interval=2
+# Memory usage
+#
+# The type defaults to "mem" if the instance is not specified.
+[memory]
+label=MEM
+separator=false
+interval=30
 
-[cpu]
-label=
-command=/usr/libexec/i3blocks/cpu_usage
-interval=1
+[memory]
+label=SWAP
+instance=swap
+separator=false
+interval=30
 
-[mem]
-label=
-command=/usr/libexec/i3blocks/memory
-interval=1
+# Network interface monitoring
+#
+# If the instance is not specified, use the interface used for default route.
+# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
+[iface]
+#instance=wlan0
+color=#00FF00
+interval=10
+separator=false
 
-[temp]
-label=
-command=/usr/libexec/i3blocks/temperature
+[wifi]
+instance=wlp2s0
+interval=10
+separator=false
+
+[bandwidth]
+instance=tun0
 interval=5
 
+# Battery indicator
+#
+# The battery instance defaults to 0.
 [battery]
-label=
-command=/usr/libexec/i3blocks/battery
-interval=10
+label=BAT
+label=⚡
+instance=1
+interval=30
 
-[volume]
-label=
-command=/usr/libexec/i3blocks/volume
-instance=Master
-#interval=repeat
-interval=1
-
-[weather]
-instance=1808759
-command=/usr/libexec/i3blocks/weather
-interval=10800
-
+# Date Time
+#
 [time]
-label=
-command=date '+%A-%d %I:%M'
-interval=1
+command=date '+%Y-%m-%d %H:%M:%S'
+interval=5
+
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+#[mediaplayer]
+#instance=spotify
+#interval=5
+#signal=10
+
+# OpenVPN support
+#
+# Support multiple VPN, with colors.
+[openvpn]
+interval=20
