--- a/i3/config
+++ b/i3/config
@@ -7,13 +7,13 @@ font pango:Hack 13
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec mate-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show run -sidebar-mode -terminal gnome-terminal
+bindsym $mod+d exec --no-startup-id rofi -show run -sidebar-mode -terminal mate-terminal
 
 # change focus
 bindsym $mod+j focus left
@@ -134,47 +134,48 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Colors
-set $snazz0 #2c2f3d
-set $snazz1 #232631
-set $snazz2 #282a36
-set $snazz3 #616263
-set $snazz4 #54555e
-set $snazz5 #686868
-set $snazz6 #f1f1f0
-set $snazz7 #eff0eb
-set $snazz8 #9aedfe
-set $snazz9 #5af78e
-set $snazz10 #ff6ac1
-set $snazz11 #ff5c57
-set $snazz12 #ffcb6b
-set $snazz13 #f3f99d
-set $snazz14 #a3be8c
-set $snazz15 #f1f1f0
-set $snazz16 #5AF78E
+set $none            #000000   
+set $very-light-gray #E6E6E6
+set $lighter-gray    #757575   
+set $gray            #373b41   
+set $dark-gray       #363738
+set $very-dark-gray  #292A2B    
+set $white           #f3f3f3
+set $light-midnight  #676B79
+set $greenish-blue   #20DFD8
+set $blue            #45A9f9
+set $blue-light      #6FC1FF
+set $purple          #B084EB
+set $green           #19F9d8
+set $red             #FF2C6D
+set $orange          #FFB86C
+set $light-orange    #fcca94
+set $pink            #FF75B5
+set $light-pink      #FF9AC1             
 
-# class                 border  backgr. text    indicator child_border
-client.focused          $snazz13 $snazz11 $snazz6  $nord11  $snazz13
-client.focused_inactive $snazz9  $snazz12 $snazz6  #484e50  $snazz0
-client.unfocused        $snazz9  #222222 #888888  #292d2e   #222222
-client.urgent           $snazz11 #ffffff $snazz6  #ffffff   #ffffff
-client.placeholder      #000000 #0c0c0c  $snazz6  #ffffff   #0c0c0c
+# class                 border  backgr. text   indicator child_border
+client.focused          $none   $none $none    $none     $greenish-blue
+client.focused_inactive $none   $none  $none   $none     $none
+client.unfocused        $none   $none  $none   $none     $none
+client.urgent           $none   $none  $red    $none     $none
+client.placeholder      $none   $none  $none   $none     $none
 
-client.background       $snazz0
+client.background       $lighter-gray
 
 bar {
         status_command i3status
-        position top
+        position bottom
 
-        separator_symbol ":|:"
+        separator_symbol "|"
         colors {
-          background $snazz0
-          statusline $snazz14
-          separator $snazz6
+          background $dark-gray
+          statusline $greenish-blue
+          separator $red
 
-        # Class            border  BckGround text
-        focused_workspace  #000000 $snazz14   $snazz1
-        active_workspace   #333333  #5f676a   $snazz0
-        inactive_workspace #333333  $snazz0   $snazz6
+        # Class            border      BckGround    text
+        focused_workspace  $none       $greenish-blue        $dark-gray
+        active_workspace   $red        $none        $none
+        inactive_workspace $greenish-blue $dark-gray   $blue-light
         }
 }
 
@@ -201,5 +202,14 @@ exec xrdb ~/.Xresources
 # Compton
 exec compton -f
 
+# opensnitch
+exec opensnitch-ui
+
 # Wallpaper
 exec_always feh --bg-fill ~/Pictures/Wallpaper/Blue.jpg
+
+# Terminal
+exec mate-terminal
+
+# Wire
+exec wire-desktop
