--- a/i3/config
+++ b/i3/config
@@ -7,7 +7,7 @@ font pango:Hack 13
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
