Added keybase exec startup

--- a/i3/config
+++ b/i3/config
@@ -134,12 +134,12 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # Colors
-set $none            #000000   
+set $none            #000000
 set $nord1           #3b4252
 set $nord2           #434c5e
-set $nord3           #4c566a   
+set $nord3           #4c566a
 set $nord4           #d8dee9
-set $nord5           #e5e9f0    
+set $nord5           #e5e9f0
 set $nord6           #eceff4
 set $nord7           #8fbcbb
 set $nord8           #88c0d0
@@ -149,7 +149,7 @@ set $nord11          #bf616a
 set $nord12          #d08770
 set $nord13          #ebcb8b
 set $nord14          #a3be8c
-set $nord15          #b48ead           
+set $nord15          #b48ead
 
 # class                 border  backgr. text   indicator  child_border
 client.focused          $nord1   $none  $none   $none      $nord11
@@ -205,3 +205,6 @@ exec_always feh --bg-fill ~/Pictures/Wallpaper/Blue.jpg
 
 # Hugo Server
 exec_always (cd ~/Command/Keybase/Personal/Command; hugo server)
+
+# Keybase Startup
+exec_always run_keybase
