--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -1,42 +1,23 @@
-# i3status configuration file.
-# see "man i3status" for documentation.
-
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
-
 general {
         colors = true
         interval = 5
 }
 
-# order += "ipv6"
 order += "disk /"
 order += "wireless _first_"
-#order += "ethernet _first_"
 order += "battery all"
-order += "path_exists VPN"
 order += "load"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "Wireless: (Signal: %quality)"
+        format_up = "Wireless: (%quality at %essid)"
         format_down = "W: down"
-		color_good = "#A3BE8C"
-        color_bad = "#BF616A"
-}
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
 }
 
-path_exists VPN {
-        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
-        path = "/proc/sys/net/ipv4/conf/tun0"
-        color_good = "#A3BE8C"
-        color_bad = "#BF616A"
+ethernet _first_ {
+        # if you use %speed, i3status requires root privileges
+        format_up = "E: (%speed)"
+        format_down = "E: down"
 }
 
 battery all {
@@ -44,11 +25,11 @@ battery all {
 }
 
 tztime local {
-        format = "%H:%M:%S"
+        format = "%Y-%m-%d %H:%M:%S"
 }
 
 load {
-    format = "load: %1min"
+        format = "CPU: %1min"
 }
 
 disk "/" {
