Added rocket chat to assigned window

--- a/i3/config
+++ b/i3/config
@@ -99,6 +99,7 @@ assign [class="Atom"] $w2
 assign [class="TestingStuff"] $w3
 # Window 4: Chat
 assign [class="TelegramDesktop"] $w4
+assign [class="Rocket.Chat"] $w4
 # window 7: Keybase
 assign [class="Keybase"] $w7
 # Window 8: Keepass
