new micro config

--- a/micro/settings.json
+++ b/micro/settings.json
@@ -4,7 +4,7 @@
     "autosave": false,
     "basename": false,
     "colorcolumn": 0,
-    "colorscheme": "simple",
+    "colorscheme": "solarized",
     "cursorline": true,
     "eofnewline": false,
     "fastdirty": true,
